# lulu

./: .gitignore  Cargo.toml  FETCH_EXAMPLES.md  MACROS.md  PACKAGE_MANAGER.md  README.md  comprehensive_macro_test.lua  flake.nix  install-linux.sh  install-windows.ps1  macro_test.lua  simple_macro_test.lua  test_macros.rs
.github/workflows/: publish.yaml  release.yaml
docs/: README.md  docs.md  index.html  sidebar.md  theme.css
docs/decorators/: README.md  defaults.md  traits.md
docs/guide/: getting-started.md  running-and-building.md  your-first-project.md
docs/lulib/: README.md  archives.md  clap.md  compression.md  crypto.md  ffi.md  interproc.md  kvdb.md  messaging.md  net.md  pathing.md  serde.md  sys.md  threads.md
docs/macros/: README.md  cfg.md  class.md  custom-macros.md  decorator.md  enum.md  lml.md  match.md  other-macros.md
docs/reference/: build-environment.md  cli-commands.md  configuration.md  costs.md  helper-classes.md  lua-runtime.md  shorthand.md  testing.md  using.md
docs/stubs/: README.md  ui.md
example/: any.lua  async.lua  classes.lua  cli.lua  compression.lua  crypto.lua  dyn.lua  enums.lua  export.lua  expr.lua  ffi.lua  interproc.lua  messaging.lua  others.lua  rec.lua  ser.lua  serve.lua  single.lua  syntax.lua  test.lua  traits.lua  tui.lua  types.lua
example/proj/: .cache  _types.lua  lulu.conf.lua  main.lua  utils.lua
example/proj/.lib/lulib/: lib.lulib
example/proj1/: lulu.conf.lua  main.lua
example/proj2/: _macros.lua  lulu.conf.lua  main.lua
example/proj4/: lulu.conf.lua  main.lua  utils.lua
example/proj4/src/: something.lua
example/servem/: _load.lua  lulu.conf.lua  main.lua
example/servem/root/: route.lua
example/servem/root/something/: page.lua
lulu-compiler/: Cargo.toml
lulu-compiler/src/: lib.rs
lulu-core/: Cargo.toml
lulu-core/src/: lib.rs
lulu-core/src/builtins/: mod.rs
lulu-lulibs/: Cargo.toml
lulu-lulibs/src/: lib.rs
src/: builders.rs  bundle.rs  cli.rs  compiler.rs  conf.rs  core.rs  flavor.rs  lib.rs  lml.rs  lsp.rs  lulu.rs  main.rs  ops.rs  ops_old.rs  package_manager.rs  project.rs  resolver.rs  sourcemap.rs  ui.rs  util.rs
src/builtins/: console.lua  interproc.lua  messaging.lua  std.lua  stddef.lua
src/builtins/net/: http.lua  kvdb.lua
src/lulibs/: archive.rs  bytes.rs  clap.rs  collections.rs  compression.rs  console.rs  crypto.rs  interproc.rs  kv.rs  messaging.rs  mod.rs  net.rs  pathing.rs  rec.rs  rust.rs  serialize.rs  threads.rs  tui.rs
src/lulibs/minifb/: mod.rs
src/ops/: core.rs  mod.rs  process.rs  std.rs  sys.rs
test/: lib.lulib  lulu.conf.lua  main.lua  utils.lua
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: lulu.tmLanguage.json
