[package]
name = "lulu"
version = "0.0.611"
authors = ["makano"]
edition = "2024"
license = "MIT"
repository = "https://github.com/kevinj045/lulu"
description = "A mini lua runtime"

[lib]
name = "lulu"
path = "src/lib.rs"

[dependencies]
mlua = { version = "0.11.4", features = ["luajit", "vendored", "async", "macros", "serde", "send"] }
clap = {version = "4.5", features = ["derive"]}
colored = "2.1"
lazy_static = "1.4"
rand = "0.8"
regex = "1.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9.33"
tokio = {version = "1.43.0", features = ["full"]}
uuid = {version = "1.4", features = ["v4"]}
sha2 = "0.10"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
anyhow = "1.0.100"
zip = "5.1.1"
flate2 = "1.1.4"
tar = "0.4.42"