[package]
name = "lulu"
version = "0.0.721"
authors = ["makano"]
edition = "2024"
license = "MIT"
repository = "https://github.com/kevinj045/lulu"
description = "A mini lua runtime"

[lib]
name = "lulu"
path = "src/lib.rs"

[dependencies]
mlua = { version = "0.11.4", features = ["luajit", "vendored", "async", "macros", "serde", "send"] }
clap = {version = "4.5", features = ["derive"]}
colored = "2.1"
lazy_static = "1.4"
rand = "0.8"
regex = "1.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9.33"
tokio = {version = "1.43.0", features = ["full"]}
uuid = {version = "1.4", features = ["v4"]}
sha2 = "0.10"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
anyhow = "1.0.100"
zip = "5.1.1"
flate2 = "1.1.4"
tar = "0.4.42"
tokio-rustls = "0.26.4"
tokio-tungstenite = "0.28.0"
futures = "0.3"
futures-util = "0.3.31"
http-body-util = "0.1.2"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = ["full"] }
sled = "0.34.7"
dirs = "6.0.0"

battery = "0.7.8"
sysinfo = "0.36.1"
crossterm = "0.25"
base64 = "0.21"

zstd = "0.13"
aes-gcm = "0.10"
interprocess = "2.2.3"
whispeer = "0.0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
