[package]
name = "lulu-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lua compiler with macro system and source mapping for the Lulu runtime"
keywords = ["lua", "compiler", "macro", "luajit"]
categories = ["compilers", "development-tools"]

[lib]
name = "lulu_compiler"
path = "src/lib.rs"

[dependencies]
mlua = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
