[package]
name = "lulu-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime types and utilities for the Lulu Lua runtime"
keywords = ["lua", "runtime", "luajit"]
categories = ["development-tools"]

[lib]
name = "lulu_core"
path = "src/lib.rs"

[dependencies]
mlua = { workspace = true }
tokio = { workspace = true }
lulu-compiler = { workspace = true }
lazy_static = { workspace = true }
