[package]
name = "lulu-lulibs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standard library modules for the Lulu Lua runtime (net, kv, console, etc.)"
keywords = ["lua", "stdlib", "library", "luajit"]
categories = ["development-tools"]

[lib]
name = "lulu_lulibs"
path = "src/lib.rs"

[dependencies]
mlua = { workspace = true }
tokio = { workspace = true }
sled = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tokio-rustls = { workspace = true }
futures-util = { workspace = true }
crossterm = { workspace = true }
battery = { workspace = true }
sysinfo = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
lazy_static = { workspace = true }
